--- a/class.ipynb
+++ b/class.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class character():\n",
+    "class Character():\n",
     "    all = []\n",
     "    def __init__(self, name, gender, ability):\n",
     "        self.name = name\n",
