--- a/class.ipynb
+++ b/class.ipynb
@@ -402,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class supercharacter(character):\n",
+    "class Supercharacter(Character):\n",
     "    \n",
     "    def __init__(self, name, gender, ability, mana_size):\n",
     "        super().__init__(name, gender, ability)\n",
