--- a/class.ipynb
+++ b/class.ipynb
@@ -15,7 +15,7 @@
     "        self.ability = ability\n",
     "        self.character_energy = 12\n",
     "        self.life_energy = 0\n",
-    "        character.all.append(self)\n",
+    "        Character.all.append(self)\n",
     "        \n",
     "    def __repr__(self):\n",
     "        return f'this is object {self.__class__.__name__} class,atribute=  {self.name }, {self.gender}, {self.ability}'\n",
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "character1 = character('pudj','male','strong')"
+    "character1 = Character('pudj','male','strong')"
    ]
   },
   {
@@ -390,9 +390,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "character1 = character('pudj','male','strong')\n",
-    "character2 = character('Puck','male','smart')\n",
-    "character3 = character('Hoodwink','male','dexterous')"
+    "character1 = Character('pudj','male','strong')\n",
+    "character2 = Character('Puck','male','smart')\n",
+    "character3 = Character('Hoodwink','male','dexterous')"
    ]
   },
   {
@@ -427,8 +427,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "character4= supercharacter('Abaddon','male','strong',20)\n",
-    "character5= supercharacter('Windranger','female','smart',25)"
+    "character4= Supercharacter('Abaddon','male','strong',20)\n",
+    "character5= Supercharacter('Windranger','female','smart',25)"
    ]
   },
   {
@@ -462,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "character4= supercharacter('Abaddon','male','strong',20)"
+    "character4= Supercharacter('Abaddon','male','strong',20)"
    ]
   },
   {
