--- a/class.ipynb
+++ b/class.ipynb
@@ -451,7 +451,7 @@
     }
    ],
    "source": [
-    "for item in character.all:\n",
+    "for item in Character.all:\n",
     "    print(item)"
    ]
   },
